<resources>
    <string name="app_name">YFT</string>
    <string name="balance">Balance:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_sync" translatable="false">pref_sync</string>
    <string name="pref_key_account_settings" translatable="false">pref_key_account_settings</string>
    <string name="pref_accountSurname" translatable="false">pref_accountSurname</string>
    <string name="enable">Enable</string>
    <string name="surname_description">User surname</string>
    <string name="login">First name</string>
    <string name="login_description">User name</string>
    <string name="account">Account</string>
    <string name="update_time_description">How often update exchange rates</string>
    <string name="update_period">Update  period</string>
    <string name="synchronization">Synchronization</string>
    <string name="enable_updates">Enable updates</string>
    <string name="update_description">Exchange rate update</string>
    <string name="about_description">Any text about app, author rights and another boring things</string>
    <string name="about_title">About app</string>
    <string name="information">Information</string>
    <string name="pref_about_title">About application</string>
    <string name="exchange_rate">Exchange Rate:</string>
    <string name="typeCurrency" translatable="false">USD -</string>
    <string name="rubType" translatable="false">RUB</string>
    <string name="usd" translatable="false">USD</string>
    <string name="account_title">Account:</string>
    <string name="last_update">Last update:</string>
    <string name="refresh">refresh</string>
    <string name="history">History</string>
    <string name="dialog_update_title">Choose period</string>
    <string name="surname">Surname</string>
    <string name="pref_currencyType" translatable="false">pref_currencyType</string>
    <string name="currency">Currency</string>
    <string name="currencyType">Currency type</string>
    <string name="chooseCurrency">Choose currency</string>
    <string name="pref_accountName" translatable="false">pref_accountName</string>
    <string name="pref_UpdateTime" translatable="false">pref_UpdateInterval</string>
    <string name="pref_accountType" translatable="false">pref_accountType</string>
    <string name="accout_type">Account type</string>
    <string name="choose_account_type">Choose account type</string>
    <string name="category_products">products</string>
    <string name="category_clothes">clothes</string>
    <string name="category_auto">auto</string>
    <string name="category_other">other</string>
    <string name="income">income</string>
    <string name="expense">expense</string>
    <string name="add_operation">Add operation</string>
    <string name="no_operations">No operations</string>
    <string name="сount">Сount:</string>
    <string name="money">money</string>
    <string name="choose_category">Choose category:</string>
    <string name="choose_operation">Choose operation:</string>
    <string name="comment">Comment:</string>
    <string name="operation_name">operation name</string>
    <string name="nothing_to_show_yet">Nothing to show yet :(</string>
    <string name="incomeMoney">Income money</string>
    <string name="expenseMoney">Expense money</string>

</resources>
